--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img class="logo" src="https://prog-8.com/images/html/advanced/gori0I9A3053072102529.jpg">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
